# compute-network

./: .gitignore  AverraNode.spec  AverraNodeWindows.py  build_windows_app.py  cluster_test_output.txt  docker-compose.yml  simulate_cluster.py
.github/workflows/: build-node.yml
contracts/: AverraToken.sol
control_plane/: Dockerfile  requirements.txt
control_plane/agents/: accountant.py  auditor.py  dispatcher.py
control_plane/api/: main.py
control_plane/database/: redis_store.py  schema.py
control_plane/events/: aggregator.py  mock_data_engine.py  nats_client.py
control_plane/reward_engine/: calculator.py
control_plane/scheduler/: engine.py  watchdog.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/pages/: Dashboard.tsx  Landing.tsx  NetworkExplorer.tsx
frontend/src/pages/auth/: Login.tsx  Signup.tsx
mock_target_repo/: agent.py
node_agent/: AverraNode.spec  README.md  build_mac_app.py  dmg_settings.py  mac_app.py  requirements.txt
node_agent/agent/: core.py  ipc.py
node_agent/dashboard/: server.py
node_agent/sentinel/: Cargo.toml
node_agent/sentinel/src/: docker.rs  main.rs  network.rs
scripts/: deploy_gcp.sh  install-linux.sh  marketer_agent.py  provision_gcp.sh
tests/: seed_enterprise_supply.py  test_inference_routing.py
