[package]
name = "sentinel"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
tokio-tungstenite = { version = "0.21" }
futures-util = "0.3"
bollard = "0.16.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
